# simple-hpc-ai-integration

./: .gitignore  CMakeLists.txt  Makefile  README.md  SimpleHPCDiagram.drawio  Timer.h  env  main  main.cpp  model.onnx  model_bs10000.onnx  model_bs5000.onnx  model_bs64000.onnx  prediction.npz  simpleHPC-diagram.drawio  test.onnx  toy-model.onnx  toynn.ipynb  utils-tvm.h  utils.cpp
frameworks/: tf_graph.ipynb
frameworks/ONNX/: TF2ONNXCOMMAND  env
frameworks/ONNX/models/: model_bs200.onnx  model_bs3000.onnx  model_bs3536.onnx  model_bs60.onnx
frameworks/TVM/: TVMC_COMPILE  archive-and-send  compile_all_modules  compile_dynamic_lib.py  compile_module_tvm.py  compile_static_modules_TVM.py  convert-tf.py  convert_tf.py  env  env_load  export.py  exportFrozenGraph.ipynb  from_tensorflow.ipynb  from_tensorflow.py  modelBS1.onnx  output  test.ipynb
frameworks/TVM/.ipynb_checkpoints/: tune_relay_x86-checkpoint.ipynb
frameworks/TVM/_old/: convert_tf.py  view_graph.ipynb
frameworks/TVM/compiled-models/no-options/: module.tar
frameworks/TVM/models/bs1/: mod.json  mod.params  modelBS1-tvm.tar
frameworks/TVM/models/no-options/: mod.json
frameworks/TVM/no-options/: mod.params
models/: convert-to-onnx.ipynb  playground.ipynb
models/toymodel/: toynn.ipynb
resnet/lib/: mod.json
toymodel/: toy-model.onnx  toynn.ipynb
